<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/menu_search"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom" />

    <group>
        <item
            android:id="@+id/search_by"
            android:title="@string/sort_by"
            app:showAsAction="never">

            <menu>
                <item
                    android:id="@+id/menu_date_added"
                    android:title="@string/date_added" />

                <item
                    android:id="@+id/menu_priority_high"
                    android:title="@string/high_priority" />
                <item
                    android:id="@+id/menu_priority_low"
                    android:title="@string/low_priority" />
            </menu>
        </item>
    </group>

    <item
        android:id="@+id/menu_deleteAll"
        android:title="@string/delete_all"
        app:showAsAction="never" />
</menu>